[project]
name = "example-auth-flask-login"
version = "0.1.0"
description = "Auth with Flask-Login Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin[sqlalchemy-with-utils]",
    "flask-login>=0.3.0",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
