[project]
name = "example-auth-blob-storage"
version = "0.1.0"
description = "Azure Blob Storage Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin[azure-blob-storage]",
    "azure-identity",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
