[project]
name = "example-babel"
version = "0.1.0"
description = "Flask-Babel Integration Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin[sqlalchemy,translation]",
    "sqlalchemy-utils>=0.41.2",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
