[project]
name = "example-bootstrap4"
version = "0.1.0"
description = "Bootstrap4 Customization Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin[sqlalchemy]",
    "sqlalchemy-utils>=0.41.2",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
