[project]
name = "example-csp-nonce"
version = "0.1.0"
description = "CSP Nonce Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin",
    "flask-talisman",
    # TODO @hasansezertasan: Remove `typing_extensions` when flask-admin properly handles typing-related imports.
    "typing_extensions"
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
