[project]
name = "example-fomanticui"
version = "0.1.0"
description = "Forms Files and Images Example."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-admin[sqlalchemy-with-utils, export]",
    "blinker==1.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "Faker==37.12.0",
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.2.4",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "redis==7.0.1",
    "SQLAlchemy==2.0.44",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "Werkzeug==3.1.3",
    "WTForms==3.2.1",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
