[project]
name = "example-forms-files-images"
version = "0.1.0"
description = "Forms Files and Images Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin[sqlalchemy-with-utils,images,translation]"
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
