[project]
name = "example-methodview"
version = "0.1.0"
description = "MethodView Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin",
    # TODO @hasansezertasan: Remove `typing_extensions` when flask-admin properly handles typing-related imports.
    "typing_extensions"
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
