[project]
name = "example-multiple-admin-instances"
version = "0.1.0"
description = "Multiple Admin Instances Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin",
    # TODO @hasansezertasan: Remove `typing_extensions` when flask-admin properly handles typing-related imports.
    "typing_extensions"
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
