[project]
name = "example-peewee"
version = "0.1.0"
description = "Peewee Model Backend Integration Example"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin[peewee]",
    "sqlalchemy>=2.0.41",
    "typing-extensions>=4.14.0",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
