[project]
name = "example-peewee"
version = "0.1.0"
description = "Peewee Model Backend Integration Example"
readme = "README.md"
requires-python = ">=3.9"
# TODO @hasansezertasan: Remove typing-extensions dependency.
dependencies = [
    "flask-admin[peewee]",
    "typing-extensions>=4.14.0",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
