[project]
name = "example-sqla-association-proxy"
version = "0.1.0"
description = "SQLAlchemy Association Proxy Example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin[sqlalchemy-with-utils]",
    # TODO: Remove `typing_extensions` when flask-admin properly handles typing-related imports.
    "typing_extensions"
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
