[project]
name = "example-sqla-custom-inline-forms"
version = "0.1.0"
description = "SQLAlchemy Custom Inline Forms Example."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-admin[sqlalchemy-with-utils]",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
