[project]
name = "example-tinymongo"
version = "0.1.0"
description = "TinyMongo model backend integration example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-admin[pymongo, sqlalchemy]",
    "tinymongo",
]

[tool.uv.sources]
flask-admin = { path = "../../", editable = true }
tinymongo = { git = "https://github.com/schapman1974/tinymongo.git" }
